--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <main class="container mx-auto mt-8">
         <!-- search  -->
         <section class="bg-gray-100 p-4 m-4">
-            <input type="text" placeholder="search" class="input input-bordered w-full max-w-xs" />
+            <input id="search-field" type="text" placeholder="search" class="input input-bordered w-full max-w-xs" />
+            <button onclick="searchHandle()" class="btn btn-accent">Search</button>
         </section>
 
         <!-- search result  -->
