--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
 
         <!-- search result  -->
         <section>
+            <!-- spinner  -->
+            <div id="loading-spinner" class="text-center my-40 hidden">
+                <span class="loading loading-spinner loading-md text-primary"></span>
+            </div>
+
             <div id="phone-container" 
             class="grid grid-cols-1 md:grid-cols-2 
                 lg:grid-cols-3 gap-4">
                 
+            </div>
+
+            <!-- show all  -->
+            <div id="show-all" class="hidden">
+                <button class="btn btn-accent">Show All</button>
             </div>
         </section>
     </main>
