--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main class="container mx-auto mt-8">
         <!-- search  -->
-        <section class="bg-gray-100 p-4 m-4">
+        <section class="bg-gray-100 p-4 mb-4">
             <input id="search-field" type="text" placeholder="search" class="input input-bordered w-full max-w-xs" />
             <button onclick="searchHandle()" class="btn btn-accent">Search</button>
         </section>
@@ -34,10 +34,26 @@
             </div>
 
             <!-- show all  -->
-            <div id="show-all" class="hidden">
+            <div onclick="handleShowAll()" id="show-all" class="hidden text-center my-8">
                 <button class="btn btn-accent">Show All</button>
             </div>
         </section>
+
+        <!-- show details modal  -->
+         <!-- Open the modal using ID.showModal() method -->
+        <button class="btn" onclick="my_modal_5.showModal()">open modal</button>
+        <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+            <h3 class="text-lg font-bold">Hello!</h3>
+            <p class="py-4">Press ESC key or click the button below to close</p>
+            <div class="modal-action">
+            <form method="dialog">
+                <!-- if there is a button in form, it will close the modal -->
+                <button class="btn">Close</button>
+            </form>
+            </div>
+        </div>
+        </dialog>
     </main>
 
     <footer>
