--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </section>
 
         <!-- show details modal  -->
-         <!-- Open the modal using ID.showModal() method -->
-        <button class="btn" onclick="my_modal_5.showModal()">open modal</button>
         <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
         <div class="modal-box">
-            <h3 class="text-lg font-bold">Hello!</h3>
-            <p class="py-4">Press ESC key or click the button below to close</p>
+            <h3 id="phone-name" class="text-lg font-bold"></h3>
+            <div id="show-details-container">
+
+            </div>
             <div class="modal-action">
             <form method="dialog">
                 <!-- if there is a button in form, it will close the modal -->
@@ -54,6 +54,7 @@
             </div>
         </div>
         </dialog>
+
     </main>
 
     <footer>
